--- a/index.html
+++ b/index.html
@@ -1,95 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Yashneil Tripathi - Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Yashneil Tripathi | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Yashneil Tripathi</h1>
-    <p>Aspiring Aerospace Engineer & Python Developer</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects & Papers</a>
-      <a href="#competitions">Competitions</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <p>High schooler exploring aerospace, AI, and everything in between.</p>
   </header>
 
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        Hi! I’m Yashneil Tripathi, a 15-year-old student based in Abu Dhabi with a strong passion for aerospace and programming.
-        I’m fascinated by aircraft design, aerodynamics, and improving aviation efficiency.
-      </p>
-      <p>
-        I ranked 64th globally and 65th nationally in the KenKen competition, reflecting my analytical and problem-solving skills.
-      </p>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a curious mind fascinated by engineering, space, and how tech shapes the future.  
+      Currently studying at <strong>Amity International School Abu Dhabi</strong>,  
+      I spend my free time building algorithms, tinkering with robotics,  
+      and working on aerospace concepts that could change the skies.
+    </p>
+  </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python programming, including projects like the Traveling Trader solver</li>
-        <li>Artificial Intelligence applications</li>
-        <li>3D modeling and CAD with Fusion 360</li>
-        <li>Data analysis and visualization using Google Sheets</li>
-        <li>Research and writing on aerospace efficiency and aircraft performance</li>
-        <li>Experience in CubeSat satellite projects</li>
-      </ul>
-    </section>
+  <section id="highlights">
+    <h2>Highlights</h2>
+    <ul>
+      <li>🥉 <strong>Bronze Medalist</strong> – Top 70 Nationwide in KENKEN Middle East Challenge</li>
+      <li>💼 <strong>Internship at PensPen</strong> – Real-world engineering experience</li>
+      <li>✈️ <strong>Research Papers</strong> on next-gen aerospace and propfan engine efficiency</li>
+      <li>🧠 <strong>AI Projects</strong> – Face-tracking code for identifying moving targets</li>
+      <li>🌍 <strong>CubeSAT Projects</strong> – Early work on mini-satellite concepts</li>
+      <li>🐍 <strong>Python Developer</strong> – Created a Travelling Trader solution using greedy neighbor algorithms</li>
+      <li>📊 <strong>Statistics Projects</strong> – Data analysis and predictive modeling in sports analytics</li>
+      <li>🤖 <strong>Robotics Enthusiast</strong> – Building and coding bots since 5th grade</li>
+      <li>🛠️ <strong>CAD Design</strong> – Skilled in Fusion 360 for aerospace prototypes</li>
+      <li>🏆 <strong>Olympiad High Scorer</strong> – Top performer in school-level national contests</li>
+      <li>✅ <strong>Certified Python Programmer</strong> – Official qualification in Python</li>
+      <li>🧩 <strong>Problem Solver</strong> – Creative and fast with solutions, especially algorithmic challenges</li>
+    </ul>
+  </section>
 
-    <section id="projects">
-      <h2>Projects & Papers</h2>
-      <ul>
-        <li>
-          <strong>Traveling Trader Solver</strong><br />
-          A Python program that demonstrates path optimization using a Greedy Neighbor approach.<br />
-          <a href="https://github.com/YashNeil/TravelingTrader" target="_blank" rel="noopener">View on GitHub</a>
-        </li>
-        <li>
-          <strong>Player Efficiency Analysis</strong><br />
-          A project focused on generating graphs and calculating the most profitable/efficient players.
-        </li>
-        <li>
-          <strong>Face Tracking Code</strong><br />
-          Python-based face tracking project demonstrating coding skills.<br />
-          <a href="https://github.com/YashNeil/FaceTracking" target="_blank" rel="noopener">View on GitHub</a>
-        </li>
-        <li>
-          <strong>CubeSat Project</strong><br />
-          Collaborative work on CubeSat satellite design and development.
-        </li>
-        <li>
-          <strong>Research on Aircraft Efficiency</strong><br />
-          Papers focused on improving aircraft performance and fuel efficiency through propfan engines.
-        </li>
-      </ul>
-    </section>
-
-    <section id="competitions">
-      <h2>Competitions</h2>
-      <p>
-        I have taken part in multiple Olympiads, which have been great opportunities to challenge myself and grow, even if I didn’t achieve top rankings.
-      </p>
-      <p>
-        I also ranked 64th globally and 65th nationally in the KenKen competition, reflecting my strong analytical skills.
-      </p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>
-        You can reach me via <a href="mailto:yashneil1201@gmail.com">email</a> or connect on <a href="https://www.linkedin.com/in/yashneil-tripathi-617108285/" target="_blank" rel="noopener">LinkedIn</a>.
-      </p>
-    </section>
-  </main>
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Travelling Trader Algorithm</strong> – Solved using greedy neighbor approach, no APIs used</li>
+      <li><strong>Face Tracking Program</strong> – Identifies and locks onto moving individuals using AI</li>
+      <li><strong>Research on Aircraft Efficiency</strong> – Papers on propfan engines and aerodynamic optimization</li>
+      <li><strong>Data Science in Sports</strong> – Built models to identify the most efficient FC Barcelona player using stats</li>
+      <li><strong>CubeSAT Concept Work</strong> – Early-stage planning for a student-made satellite</li>
+    </ul>
+  </section>
 
   <footer>
+    <p>📫 Let's connect: <a href="mailto:yashneil@example.com">yashneil@example.com</a></p>
     <p>© 2025 Yashneil Tripathi</p>
   </footer>
 </body>
