--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yashneil Tripathi | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -43,8 +43,14 @@
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Travelling Trader Algorithm</strong> – Solved using greedy neighbor approach, no APIs used</li>
-      <li><strong>Face Tracking Program</strong> – Identifies and locks onto moving individuals using AI</li>
+      <li>
+        <strong>Travelling Trader Algorithm</strong> – Solved using greedy neighbor approach, no APIs used. 
+        <a href="https://github.com/yashneilt/TravellingTrader" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+      </li>
+      <li>
+        <strong>Face Tracking Program</strong> – Identifies and locks onto moving individuals using AI. 
+        <a href="https://github.com/yashneilt/FaceTracker" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+      </li>
       <li><strong>Research on Aircraft Efficiency</strong> – Papers on propfan engines and aerodynamic optimization</li>
       <li><strong>Data Science in Sports</strong> – Built models to identify the most efficient FC Barcelona player using stats</li>
       <li><strong>CubeSAT Concept Work</strong> – Early-stage planning for a student-made satellite</li>
@@ -52,7 +58,10 @@
   </section>
 
   <footer>
-    <p>📫 Let's connect: <a href="mailto:yashneil@example.com">yashneil@example.com</a></p>
+    <p>📫 Let's connect:</p>
+    <p>Email: yashneil1201@gmail.com</p>
+    <p>Phone: +971 55 647 5632</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/yashneil-tripathi-617108285/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/yashneil-tripathi-617108285/</a></p>
     <p>© 2025 Yashneil Tripathi</p>
   </footer>
 </body>
