--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Yashneil Tripathi | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>yashneil tripathi | portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="brutalist">
+
+  <!-- HEADER -->
   <header>
-    <h1>Yashneil Tripathi</h1>
-    <p>High schooler exploring aerospace, AI, and everything in between.</p>
+    <h1>yashneil tripathi</h1>
+    <p>high schooler exploring aerospace, ai, and everything in between.</p>
   </header>
 
+  <!-- ABOUT -->
   <section id="about">
-    <h2>About Me</h2>
+    <h2>about me</h2>
     <p>
-      I'm a curious mind fascinated by engineering, space, and how tech shapes the future.  
-      Currently studying at <strong>Amity International School Abu Dhabi</strong>,  
-      I spend my free time building algorithms, tinkering with robotics,  
+      curious mind fascinated by engineering, space, and how tech shapes the future.<br>
+      currently studying at <strong>amity international school, abu dhabi</strong>.<br>
+      spend free time building algorithms, tinkering with robotics,<br>
       and working on aerospace concepts that could change the skies.
     </p>
   </section>
 
+  <!-- HIGHLIGHTS -->
   <section id="highlights">
-    <h2>Highlights</h2>
+    <h2>highlights</h2>
     <ul>
-      <li>🥉 <strong>Bronze Medalist</strong> – Top 70 Nationwide in KENKEN Middle East Challenge</li>
-      <li>💼 <strong>Internship at PensPen</strong> – Real-world engineering experience</li>
-      <li>✈️ <strong>Research Papers</strong> on next-gen aerospace and propfan engine efficiency</li>
-      <li>🧠 <strong>AI Projects</strong> – Face-tracking code for identifying moving targets</li>
-      <li>🌍 <strong>CubeSAT Projects</strong> – Early work on mini-satellite concepts</li>
-      <li>🐍 <strong>Python Developer</strong> – Created a Travelling Trader solution using greedy neighbor algorithms</li>
-      <li>📊 <strong>Statistics Projects</strong> – Data analysis and predictive modeling in sports analytics</li>
-      <li>🤖 <strong>Robotics Enthusiast</strong> – Building and coding bots since 5th grade</li>
-      <li>🛠️ <strong>CAD Design</strong> – Skilled in Fusion 360 for aerospace prototypes</li>
-      <li>🏆 <strong>Olympiad High Scorer</strong> – Top performer in school-level national contests</li>
-      <li>✅ <strong>Certified Python Programmer</strong> – Official qualification in Python</li>
-      <li>🧩 <strong>Problem Solver</strong> – Creative and fast with solutions, especially algorithmic challenges</li>
+      <li> bronze medalist – top 70 nationwide in kenken middle east challenge</li>
+      <li> internship at penspen – real-world engineering experience</li>
+      <li> research papers on next-gen aerospace and propfan engine efficiency</li>
+      <li> ai projects – <a href="https://github.com/yashneilt/FaceTracker" target="_blank">face-tracking code</a> for identifying moving targets</li>
+      <li> cubesat projects – early work on mini-satellite concepts</li>
+      <li> python developer – <a href="https://github.com/yashneilt/TravellingTrader" target="_blank">travelling trader solution</a> using greedy neighbor algorithms</li>
+      <li> statistics projects – data analysis and predictive modeling in sports analytics</li>
+      <li> robotics enthusiast – building and coding bots since 5th grade</li>
+      <li> cad design – skilled in fusion 360 for aerospace prototypes</li>
+      <li> olympiad high scorer – top performer in school-level national contests</li>
+      <li> certified python programmer – official qualification in python</li>
+      <li> problem solver – creative and fast with solutions, especially algorithmic challenges</li>
     </ul>
   </section>
 
+  <!-- PROJECTS -->
   <section id="projects">
-    <h2>Projects</h2>
+    <h2>projects</h2>
     <ul>
-      <li>
-        <strong>Travelling Trader Algorithm</strong> – Solved using greedy neighbor approach, no APIs used. 
-        <a href="https://github.com/yashneilt/TravellingTrader" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-      </li>
-      <li>
-        <strong>Face Tracking Program</strong> – Identifies and locks onto moving individuals using AI. 
-        <a href="https://github.com/yashneilt/FaceTracker" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-      </li>
-      <li><strong>Research on Aircraft Efficiency</strong> – Papers on propfan engines and aerodynamic optimization</li>
-      <li><strong>Data Science in Sports</strong> – Built models to identify the most efficient FC Barcelona player using stats</li>
-      <li><strong>CubeSAT Concept Work</strong> – Early-stage planning for a student-made satellite</li>
+      <li><a href="https://github.com/yashneilt/TravellingTrader" target="_blank">travelling trader algorithm</a> – solved using greedy neighbor approach, no apis used</li>
+      <li><a href="https://github.com/yashneilt/FaceTracker" target="_blank">face tracking program</a> – identifies and locks onto moving individuals using ai</li>
+      <li>research on aircraft efficiency – papers on propfan engines and aerodynamic optimization</li>
+      <li>data science in sports – Data analysis and predictive modeling in sports analytics</li>
+      <li>cubesat concept work – early-stage planning for a student-made satellite</li>
     </ul>
   </section>
 
+  <!-- CONTACT -->
   <footer>
-    <p>📫 Let's connect:</p>
-    <p>Email: yashneil1201@gmail.com</p>
-    <p>Phone: +971 55 647 5632</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/yashneil-tripathi-617108285/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/yashneil-tripathi-617108285/</a></p>
-    <p>© 2025 Yashneil Tripathi</p>
+    <p> yashneil1201@gmail.com</p>
+    <p> +971 55 647 5632</p>
+    <p><a href="https://www.linkedin.com/in/yashneil-tripathi-617108285/" target="_blank">linkedin profile</a></p>
+    <p>© 2025 yashneil tripathi</p>
   </footer>
+
 </body>
 </html>
