--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>yashneil tripathi | portfolio</title>
+  <title>Yashneil Tripathi | portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
   <!-- HEADER -->
   <header>
-    <h1>yashneil tripathi</h1>
+    <h1>Yashneil Tripathi</h1>
     <p>high schooler exploring aerospace, ai, and everything in between.</p>
   </header>
 
@@ -20,7 +20,7 @@
     <h2>about me</h2>
     <p>
       curious mind fascinated by engineering, space, and how tech shapes the future.<br>
-      currently studying at <strong>amity international school, abu dhabi</strong>.<br>
+      currently studying at <strong>Amity International School, Abu Dhabi</strong>.<br>
       spend free time building algorithms, tinkering with robotics,<br>
       and working on aerospace concepts that could change the skies.
     </p>
@@ -67,3 +67,4 @@
 
 </body>
 </html>
+
