--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yashneil Tripathi | portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Yashneil Tripathi | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="brutalist">
+<body>
 
   <!-- HEADER -->
   <header>
@@ -19,9 +18,9 @@
   <section id="about">
     <h2>about me</h2>
     <p>
-      curious mind fascinated by engineering, space, and how tech shapes the future.<br>
-      currently studying at <strong>Amity International School, Abu Dhabi</strong>.<br>
-      spend free time building algorithms, tinkering with robotics,<br>
+      curious mind fascinated by engineering, space, and how tech shapes the future.<br />
+      currently studying at <strong>Amity International School, Abu Dhabi</strong>.<br />
+      spend free time building algorithms, tinkering with robotics,<br />
       and working on aerospace concepts that could change the skies.
     </p>
   </section>
@@ -30,18 +29,18 @@
   <section id="highlights">
     <h2>highlights</h2>
     <ul>
-      <li> bronze medalist – top 70 nationwide in kenken middle east challenge</li>
-      <li> internship at penspen – real-world engineering experience</li>
-      <li> research papers on next-gen aerospace and propfan engine efficiency</li>
-      <li> ai projects – <a href="https://github.com/yashneilt/FaceTracker" target="_blank">face-tracking code</a> for identifying moving targets</li>
-      <li> cubesat projects – early work on mini-satellite concepts</li>
-      <li> python developer – <a href="https://github.com/yashneilt/TravellingTrader" target="_blank">travelling trader solution</a> using greedy neighbor algorithms</li>
-      <li> statistics projects – data analysis and predictive modeling in sports analytics</li>
-      <li> robotics enthusiast – building and coding bots since 5th grade</li>
-      <li> cad design – skilled in fusion 360 for aerospace prototypes</li>
-      <li> olympiad high scorer – top performer in school-level national contests</li>
-      <li> certified python programmer – official qualification in python</li>
-      <li> problem solver – creative and fast with solutions, especially algorithmic challenges</li>
+      <li>bronze medalist – top 70 nationwide in kenken middle east challenge</li>
+      <li>internship at penspen – real-world engineering experience</li>
+      <li>research papers on next-gen aerospace and propfan engine efficiency</li>
+      <li>ai projects – <a href="https://github.com/yashneilt/FaceTracker" target="_blank">face-tracking code</a> for identifying moving targets</li>
+      <li>cubesat projects – early work on mini-satellite concepts</li>
+      <li>python developer – <a href="https://github.com/yashneilt/TravellingTrader" target="_blank">travelling trader solution</a> using greedy neighbor algorithms</li>
+      <li>statistics projects – data analysis and predictive modeling in sports analytics</li>
+      <li>robotics enthusiast – building and coding bots since 5th grade</li>
+      <li>cad design – skilled in fusion 360 for aerospace prototypes</li>
+      <li>olympiad high scorer – top performer in school-level national contests</li>
+      <li>certified python programmer – official qualification in python</li>
+      <li>problem solver – creative and fast with solutions, especially algorithmic challenges</li>
     </ul>
   </section>
 
@@ -52,19 +51,18 @@
       <li><a href="https://github.com/yashneilt/TravellingTrader" target="_blank">travelling trader algorithm</a> – solved using greedy neighbor approach, no apis used</li>
       <li><a href="https://github.com/yashneilt/FaceTracker" target="_blank">face tracking program</a> – identifies and locks onto moving individuals using ai</li>
       <li>research on aircraft efficiency – papers on propfan engines and aerodynamic optimization</li>
-      <li>data science in sports – Data analysis and predictive modeling in sports analytics</li>
+      <li>data science in sports – data analysis and predictive modeling in sports analytics</li>
       <li>cubesat concept work – early-stage planning for a student-made satellite</li>
     </ul>
   </section>
 
   <!-- CONTACT -->
   <footer>
-    <p> yashneil1201@gmail.com</p>
-    <p> +971 55 647 5632</p>
+    <p>yashneil1201@gmail.com</p>
+    <p>+971 55 647 5632</p>
     <p><a href="https://www.linkedin.com/in/yashneil-tripathi-617108285/" target="_blank">linkedin profile</a></p>
-    <p>© 2025 yashneil tripathi</p>
+    <p>© 2025 Yashneil Tripathi</p>
   </footer>
 
 </body>
 </html>
-
